GNOME Bugzilla – Bug 711852
archive backend doesn't fill in G_FILE_ATTRIBUTE_FILESYSTEM_{SIZE,FREE,USED}
Last modified: 2013-11-15 15:00:09 UTC
archive backend doesn't fill in G_FILE_ATTRIBUTE_FILESYSTEM_{SIZE,FREE,USED}. Not a big issue but it seems easy enough to implement.
Created attachment 259573 [details] [review] archive: Set filesystem size information Set the total size and the amount used to be the total size of the files; set the amount free to 0.
Review of attachment 259573 [details] [review]: Looks good.
Pushed to master as ff870666620b48f9563d7c587b56ed06c349a96c. Thanks!