archive: Set filesystem size information

Set the total size and the amount used to be the total size of the
files; set the amount free to 0.

https://bugzilla.gnome.org/show_bug.cgi?id=711852